codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_doctor__airs_doctor_unavailable.snap
---
source: tui/src/chatwidget/tests/airs_doctor.rs
expression: "render_doctor(&chat, width)"
---


  Connection health · work
  Unknown. No conversation or tool is replayed.

› 1. Refresh diagnostics      Read configuration and health; no inference request.
  2. Verify gateway access    Confirm a minimal inference request; no conversation,
                              files or tools.
  3. Diagnostics unavailable  Diagnostics timed out. Retry /doctor.
  4. MCP · service-now        Not verified · select to reconnect
  5. Diagnostic report        Preview, copy or save a report with private identifiers
                              omitted.
  6. Manage MCP connections   Add a gateway server, sign in, reconnect or check
                              discovered tools.

  Press enter to confirm or esc to go back
